<resources>
    <string name="app_name">无笔安全</string>
    <string name="hello_world">Hello world!</string>
    <string name="_sim_sim_bind_info">"    绑定SIM卡后，当再次重启手机时，若SIM卡信息发生变化，手机卫士会自动发送报警短信给安全号码！"</string>
    <string name="sample_device_admin_description">我是设备的超级管理员。开启我之后就可以清除数据，远程锁屏。</string>
    <string name="sample_device_admin">手机卫士管理器</string>
    <string name="operatorset_string">进行一次设置就可以保证快速校验流量，和运营商保持联系</string>

    <!--开始杀毒 按钮点击颜色改变 -->
    <drawable name="clr_normal">#FF303F9F</drawable>
    <drawable name="clr_pressed">#1a2886</drawable>

    <!--一键清除 按钮点击颜色改变 -->
    <drawable name="clear_normal">#37cc2c</drawable>
    <drawable name="clear_pressed">#176b10</drawable>

    <string name="step1">请先选择</string>
    <string name="step1.1">注册人脸</string>

    <string name="step2">然后选择</string>
    <string name="step2.1">人脸杀毒</string>
    <string name="more">更多功能</string>
    <string name="antivirus">安全卫士</string>
    <string name="StringNewsReader">阅读新鲜事</string>
    <string name="StringHealth">无笔健康</string>

    <string name="faceVirus0">未检出病症</string>
    <string name="faceVirus10">不明显的痤疮</string>
    <string name="faceVirus20">较为明显的黑头</string>
    <string name="faceVirus30">较为明显的酒渣鼻</string>
    <string name="faceVirus50">较为明显的黄褐斑</string>
    <string name="faceVirus70">明显的老年疣</string>

    <string name="show_textview_rx">下载流量KB</string>
    <string name="show_textview_tx">上传流量KB</string>
    <string name="show_textview_total">流量总计KB</string>
    <string name="liuliangdanwei">M</string>
    <string name="morenliuliang">0.0</string>
    <string name="now_liuliang_total">当前流量统计</string>
    <string name="g_down_total">3g下载流量：</string>
    <string name="g_up_total">3g上传流量：</string>
    <string name="g_total">3g总计流量：</string>
    <string name="down_total">下载总流量：</string>
    <string name="up_total">上传总流量：</string>
    <string name="total_liuliang">共计总流量：</string>
    <string name="date_chose_start">选择开始时间</string>
    <string name="date_chose_over">选择结束时间</string>
    <string name="search_now"> 查询  </string>
    <string name="every_apps_data">查询每个程序详细流量</string>
    <string name="show_now"> 当前流量 </string>

    <string name="emptyFloder">空文件整理</string>
    <string name="action_settings">Settings</string>

    <string name="title_flipboard">智能设备</string>
    <string name="animate">"秀"一下</string>
    <string name="devices_one">华为体脂秤</string>
    <string name="devices_two">lumsing体脂秤</string>
    <string name="devices_three">云麦体脂秤</string>

    <string name="VERY_SEVERELY_UNDERWEIGHT">体重严重不足</string>
    <string name="SEVERELY_UNDERWEIGHT">特别轻</string>
    <string name="UNDERWEIGHT">偏轻</string>
    <string name="NORMAL">健康</string>
    <string name="OVERWEIGHT">肥胖</string>
    <string name="OBESE_CLASS_1">Obese Class 1</string>
    <string name="OBESE_CLASS_2">Obese Class 2</string>
    <string name="OBESE_CLASS_3">Obese Class 3</string>

    <string name="VERY_SEVERELY_UNDERWEIGHT1">瘦</string>
    <string name="SEVERELY_UNDERWEIGHT1">偏瘦</string>
    <string name="UNDERWEIGHT1">标准</string>
    <string name="NORMAL1">微胖</string>
    <string name="OVERWEIGHT1">肥胖</string>

    <string name="menu_qrcode">扫一扫</string>
    <string name="menu_setting">设置</string>
    <string name="menu_money">捐助我们</string>

    <string name="personal_retry">以上数据是根据你的身体数据和设定的目标来计算的，如果有较大的变动，请重新测评</string>

    <string name="share_name">shareImg</string>

    <!--菜谱详情页面-->
    <string name="keywords_title">关键词</string>
    <string name="message_title">做&#032;&#032;&#032;&#032;法</string>

    <!--菜谱搜索页面-->
    <string name="hint">搜索菜名或食材</string>
    <string name="tips">没有搜索结果，搜索红烧肉试试</string>

    <string name="loading_full">没有更多了～</string>

    <!--课程-->
    <!--课程主页面-->
    <string name="bottom_train">锻炼</string>
    <string name="bottom_found">发现</string>
    <string name="bottom_notes">笔记</string>
    <string name="bottom_me">我的</string>
    <string name="title_train">锻炼</string>
    <string name="title_found">笔记</string>
    <string name="title_me">我的</string>
    <!--笔记-->
    <string name="slash">/</string>
    <string name="found_top_info">分享心得</string>
    <string name="notes_top_info">课程笔记</string>
    <string name="found_list_top_title"> 经验分享 </string>
    <string name="notes_list_top_title"> 我的笔记 </string>
    <!--笔记-->
    <!--我的-->
    <string name="me_homepage_text">我的主页</string>
    <string name="me_exercise_unit">锻炼时间 / 分钟</string>
    <string name="me_record_uint">累计打卡 / 天</string>
    <string name="me_exit_text">返回</string>
    <string name="me_comment_text">我的评论</string>
    <string name="me_record_text">打卡</string>
    <string name="me_favor_text">我的收藏</string>
    <string name="me_record_number">0</string>
    <string name="me_app_version">V1.0</string>
    <!--我的-->
    <!--锻炼-->
    <string name="level_base_title"> 基础训练</string>
    <string name="level_base_head">无笔健康 - 初级</string>
    <string name="level_base_info">8分钟   40千卡   L1初级</string>
    <string name="level_enhance_title"> 进击训练</string>
    <string name="level_enhance_head">无笔健康 - 中级</string>
    <string name="level_enhance_info">9分钟   60千卡   L3中级</string>
    <string name="level_acme_title"> 魔鬼训练</string>
    <string name="level_acme_head">无笔健康 - 极致</string>
    <string name="level_acme_info">11分钟   100千卡   L5高级</string>
    <!--锻炼-->
    <!--打卡-->
    <string name="date_check_text">今日打卡</string>
    <string name="before_date_check_text">每日打卡</string>
    <!--打卡-->
    <string name="loading_summary">正在玩命的加载中!</string>
    <!--新鲜事详细-->
    <string name="new_detail_comment">全部评论</string>
    <string name="new_detail_add_comment">评论</string>
    <string name="new_detail_add_favor">收藏</string>
    <string name="new_detail_add_comment_hint">发表回复..</string>
    <!--新鲜事详细-->

    <!--新鲜事-->
    <string name="add_news_btn_release_txt">确定</string>
    <string name="add_news_et_title_hint_text">标题</string>
    <string name="add_news_et_hint_text">晒改变、晒心得、晒运动，晒啊晒..</string>
    <!--新鲜事-->
</resources>
