<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/bg02"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">

	<include layout="@layout/titlebar"/>

	<LinearLayout android:orientation="horizontal"
		android:layout_width="wrap_content" android:layout_height="wrap_content">

		<TextView android:id="@+id/apps_name_tv"
			android:layout_height="@dimen/item_height" android:layout_width="110dp"
			android:textColor="@color/purple"
            android:textSize="25dp"
			android:text="程序名称"
			 />
		<TextView android:id="@+id/apps_rx_name"
			android:layout_height="@dimen/item_height" android:layout_width="@dimen/item_data_width"
            android:textColor="@color/lightText"
			android:text="@string/show_textview_rx"
			/>
		<TextView android:id="@+id/apps_tx_name"
			android:layout_height="@dimen/item_height" android:layout_width="@dimen/item_data_width"
            android:textColor="@color/lightText"
			android:text="@string/show_textview_tx"
			/>
		<TextView android:id="@+id/apps_total_name" android:layout_height="@dimen/item_height"
            android:textColor="@color/lightText"
			android:layout_width="@dimen/item_data_width" 
			android:text="@string/show_textview_total"
			/>
	</LinearLayout>
	<ListView android:id="@+id/apps_data_listview"
		android:layout_width="match_parent" android:layout_height="match_parent">
	</ListView>
</LinearLayout>
